--- a/main.html
+++ b/main.html
@@ -21,12 +21,16 @@
         <h2 class="language-select_title">Select your language:</h2>
 
         <div class="language" onclick="reddir('eng')">
-            <img class="language_image" src="./static/img/united-kingdom_simple.svg">
-            <p class="language_title" style="bottom:25%">English</p>
+            <div class="flag">
+                <div class="flagwave"></div>
+                <!-- <img class="language_image" src="./static/img/us_big.svg"> -->
+            </div>
+            <p class="language_title">English</p>
         </div>
         <div class="language" onclick="reddir('rus')">
-            <img class="language_image" src="./static/img/russia_simple.svg ">
-            <p class="language-select-item_title " style="bottom:25% ">Русский</p>
+
+            <img class="language_image" src="./static/img/russia_big.svg ">
+            <p class="language-select-item_title ">Русский</p>
         </div>
     </div>
     <!-- <a href="http://thebank.sas-mic.local/atm/main.html "> -->
