--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
         <h2 class="language-select_title">Select your language:</h2>
 
         <div class="language" onclick="reddir('eng')">
-            <div class="flag">
-                <div class="flagwave"></div>
+            <div class="flag shine">
+                <div class="shine"></div>
                 <!-- <img class="language_image" src="./static/img/us_big.svg"> -->
             </div>
             <p class="language_title">English</p>
