language page remastered

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
+    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/index.js" async="true"></script>
 
 </head>
@@ -58,7 +59,7 @@
     </div>
 
     <div class="headline js-headline">
-        <p class="headline_word js-word">Наш конек &ndash;</p>
+        <p class="headline_word js-word">Эджайл</p>
         <p class="headline_word js-word">Дип лёрнинг</p>
         <p class="headline_word js-word">Машин лёрнинг</p>
     </div>
