main finished pin started

--- a/main.html
+++ b/main.html
@@ -31,13 +31,13 @@
         <h2 class="language_title js-language-title">Select your language:</h2>
 
         <div class="languages">
-            <div class="language js-language" data-lang="eng">
-                <p class="language_name button">English</p>
+            <div class="language">
+                <p class="language_name button js-language" data-lang="eng">English</p>
                 <!-- <img class="language_flag" src="./static/img/us_big.svg"> -->
             </div>
 
-            <div class="language js-language" data-lang="rus">
-                <p class="language_name button">Русский</p>
+            <div class="language">
+                <p class="language_name button js-language" data-lang="rus">Русский</p>
                 <!-- <img class="language_flag" src="./static/img/russia_big.svg "> -->
             </div>
         </div>
