--- a/main.html
+++ b/main.html
@@ -12,7 +12,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="../js/idle-timer.min.js"></script>
-    <script type="text/javascript" src="../js/ext-core.js"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/main.js" async="true"></script>
@@ -25,20 +24,21 @@
 
     <img class="watermark-image" src='./static/img/earth.svg'>
     <!-- <img class="world-picture" src='./static/img/sas_icon_simple.png'> -->
+    <div class="center-content">
+        <div class="languages-wrapper">
+            <h2 class="language_title js-language-title">Выберите язык:</h2>
+            <h2 class="language_title js-language-title">Select your language:</h2>
 
-    <div class="languages-wrapper">
-        <h2 class="language_title js-language-title">Выберите язык:</h2>
-        <h2 class="language_title js-language-title">Select your language:</h2>
+            <div class="languages">
+                <div class="language">
+                    <p class="language_name button js-language" data-lang="eng">English</p>
+                    <!-- <img class="language_flag" src="./static/img/us_big.svg"> -->
+                </div>
 
-        <div class="languages">
-            <div class="language">
-                <p class="language_name button js-language" data-lang="eng">English</p>
-                <!-- <img class="language_flag" src="./static/img/us_big.svg"> -->
-            </div>
-
-            <div class="language">
-                <p class="language_name button js-language" data-lang="rus">Русский</p>
-                <!-- <img class="language_flag" src="./static/img/russia_big.svg "> -->
+                <div class="language">
+                    <p class="language_name button js-language" data-lang="rus">Русский</p>
+                    <!-- <img class="language_flag" src="./static/img/russia_big.svg "> -->
+                </div>
             </div>
         </div>
     </div>
