--- a/pin.html
+++ b/pin.html
@@ -14,213 +14,69 @@
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Bungee+Inline|Rubik+Mono+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./static/js/pin.js" async="true"></script>
 
 </head>
 
 <body class="main-background">
     <!-- <a href="http://thebank.sas-mic.local/atm/main.html "></a> -->
     <a href="#" class="atm-name">ATM-F</a>
-    <p id='pin' style="font-size:60px;text-align:center;margin-top:1%;font-family:'Sans';width: 100%;height:55px"></p>
 
-    <form id="passform" style="">
-        <input type="password" class="pin-input" id="num" />
-    </form>
-    <table id="keypad" align="center">
-        <tbody>
-            <tr>
-                <td>
-                    <div class="pin-button button">1</button>
-                </td>
-                <td>
-                    <div class="pin-button button">2</div>
-                </td>
-                <td>
-                    <div class="pin-button button">3</div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="pin-button button">4</div>
-                </td>
-                <td>
-                    <div class="pin-button button">5</div>
-                </td>
-                <td>
-                    <div class="pin-button button">6</div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="pin-button button">7</div>
-                </td>
-                <td>
-                    <div class="pin-button button">8</div>
-                </td>
-                <td>
-                    <div class="pin-button button">9</div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="pin-button button button_dark">del</div>
-                </td>
-                <td>
-                    <div class="pin-button button">0</div>
-                </td>
-                <td>
-                    <div class="pin-button button button_dark">&crarr;</div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <div id="footer" class="navbar navbar-fixed-bottom" style="background-color:#5B9BD5;height:5vh;border:3px solid rgb(118, 113, 113)"></div>
-    <script type="text/javascript">
-        function readCookie(name) {
-            var nameEQ = name + "=";
-            var ca = document.cookie.split(';');
-            for (var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-            }
-            return null;
-        };
-        $("#pin").html((readCookie('Lang') == 'rus') ? 'Введите Ваш ПИН-код' : 'Enter your PIN');
-        $(".delete").html((readCookie('Lang') == 'rus') ? 'Очистить' : 'Delete');
-        $(".accept").html((readCookie('Lang') == 'rus') ? 'Принять' : 'Accept');
-        $("button").click(
-
-            function() {
-
-                if ($(this).hasClass("delete")) {
-                    $("#num").val($("#num").val().slice(0, -1))
-                } else if ($(this).hasClass("accept")) {
-                    ident();
-                } else {
-                    if ($("#num").val().length == 4) {
-                        return;
-                    }
-                    $("#num").val($("#num").val() + $(this).html());
-                }
-
-            }
-        );
-
-        function req() {
-            $.ajax({
-                    url: 'http://10.20.1.21:5000/atm_status',
-                })
-                .done(function(data) {
-                    console.log("Ajax was succsessfully sent");
-                    console.log(JSON.parse(data).status);
-                    if (JSON.parse(data).status == false) {
-                        location = "outofserv.html"
-                    }
-                })
-                .fail(function() {
-                    console.log("Ajax failed to fetch data")
-                })
-        }
-
-        //Непрерывный опрос сервиса
-        setInterval(req, 3000);
-
-
-        //Установка таймера бездействия пользователя
-        $.idleTimer(120000);
-        $(document).bind('idle.idleTimer', function() {
-            location.href = 'index.html'
-        });
-
-
-
-        //document.getElementById('keypad').style.left = $(window).width()/2-210+'px';
-        document.getElementById('passform').style.left = $(window).width() / 2 - 245 + 'px';
-        var br = document.getElementById('keypad').getBoundingClientRect();
-        document.getElementById('passform').style.top = br.top - 150 + 'px';
-
-
-        function ident() {
-            if ($("#num").val() == '1001') {
-                document.cookie = "id=16002; path=/";
-                document.cookie = "fname=Максим; path=/";
-                document.cookie = "lname=Цуканов; path=/";
-                document.cookie = "mname=Викторович; path=/";
-                document.cookie = "pin=" + $("#num").val() + "; path=/";
-                location.href = "cat.html"
-            };
-            if ($("#num").val() == '1000') {
-                document.cookie = "id=16001; path=/";
-                document.cookie = "fname=Илья; path=/";
-                document.cookie = "lname=Маршаков; path=/";
-                document.cookie = "mname=Анатольевич; path=/";
-                document.cookie = "pin=" + $("#num").val() + "; path=/";
-                location.href = "cat.html"
-            };
-        }
-
-
-
-        function url() {
-            var rdmServiceAdapterURL = 'sasbap.demo.sas.com:7070/RTDM/EVENT';
-            var rdmEvent2 = {
-                "Envelope": {
-                    "@xmlns": "http://schemas.xmlsoap.org/soap/envelope/",
-                    "Header": null,
-                    "Body": {
-                        "Event": {
-                            "@xmlns": "http://www.sas.com/xml/schema/sas-svcs/rtdm-1.1",
-                            "@name": "SetURLEvent",
-                            "Header": {
-                                "Identity": "SAS_IDENT",
-                                "ClientTimeZoneID": "GMT"
-                            },
-                            "Body": {
-                                "Data": [
-
-                                    {
-                                        "@name": "PIN",
-                                        "String": {
-                                            "Val": $('input.keypad').val()
-                                        }
-                                    }, {
-                                        "@name": "Scenario_Id",
-                                        "String": {
-                                            "Val": '1'
-                                        }
-                                    }
-
-                                ]
-                            }
-                        }
-                    }
-                }
-            };
-            var jsonData2 = Ext.util.JSON.encode(rdmEvent2);
-            //alert(jsonData2);
-            var script = document.createElement('script');
-            var src = 'http://' + rdmServiceAdapterURL + '?jsonp=func&jsonData=' + jsonData2 + '&dc=' + (new Date().getTime());
-            script.setAttribute('type', 'text/javascript');
-            script.setAttribute('src', src);
-            document.getElementsByTagName('head')[0].appendChild(script);
-            //alert('ok!');
-        };
-
-        function func(jsonData2) {
-            var URLvar;
-            var text;
-            var out = jsonData2.Envelope.Body.EventResponse.Body.Data;
-            URLvar = out[0].String.Val;
-            Text = out[1].String.Val;
-            document.cookie = "Text=" + Text + "; path=/";
-            document.cookie = "Pin=" + $('input.keypad').val() + "; path=/";
-            location.href = URLvar;
-
-
-        };
-    </script>
+    <!-- <p id='pin' style="font-size:60px;text-align:center;margin-top:1%;font-family:'Sans';width: 100%;height:55px"></p> -->
+    <div class="center-content">
+        <form id="pin-form js-pin-form">
+            <input type="password" placeholder="Пин код" class="pin-input js-pin-input" id="num" />
+            <table id="keypad" align="center">
+                <tbody>
+                    <tr>
+                        <td>
+                            <div class="pin-button button">1</button>
+                        </td>
+                        <td>
+                            <div class="pin-button button">2</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">3</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="pin-button button">4</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">5</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">6</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="pin-button button">7</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">8</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">9</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="pin-button button button_dark">del</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button">0</div>
+                        </td>
+                        <td>
+                            <div class="pin-button button button_dark">&crarr;</div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+        </div>
 </body>
 
 </html>
