--- a/pin.html
+++ b/pin.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <script type="text/javascript" src="./static/js/pin.js" async="true"></script>
-
 </head>
 
 <body class="main-background">
