--- a/language.html
+++ b/language.html
@@ -4,7 +4,7 @@
 <head>
     <link href="./static/css/reset.css" rel="stylesheet" media="screen">
     <link href="./static/css/common.css" rel="stylesheet" media="screen">
-    <link href="./static/css/main.css" rel="stylesheet" media="screen">
+    <link href="./static/css/language.css" rel="stylesheet" media="screen">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
 
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../js/idle-timer.min.js"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
-    <script type="text/javascript" src="./static/js/main.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/language.js" async="true"></script>
 </head>
 
 <body class="main-background">
