--- a/pin.html
+++ b/pin.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -23,6 +23,7 @@
 <body class="main-background">
     <!-- <a href="http://thebank.sas-mic.local/atm/main.html "></a> -->
     <a href="#" class="atm-name">ATM-F</a>
+    <img class="watermark-image" src='./static/img/key.svg'>
 
     <!-- <p id='pin' style="font-size:60px;text-align:center;margin-top:1%;font-family:'Sans';width: 100%;height:55px"></p> -->
     <div class="center-content">
@@ -69,7 +70,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="pin-button js-pin-button button button_dark" data-button-value="del">del</div>
+                            <div class="pin-button js-pin-button button button_dark" data-button-value="del"><img data-button-value="del" src="./static/img/delete-text.svg" class="delete-button_image"></div>
                         </td>
                         <td>
                             <div class="pin-button js-pin-button button" data-button-value="0">0</div>
