--- a/return_card.html
+++ b/return_card.html
@@ -1,7 +1,11 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link href="./static/css/reset.css" rel="stylesheet" media="screen">
     <link href="./static/css/common.css" rel="stylesheet" media="screen">
     <link href="./static/css/language.css" rel="stylesheet" media="screen">
@@ -15,6 +19,7 @@
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/language.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/redirect_to_index.js" async="true"></script>
 </head>
 
 <body class="main-background">
@@ -22,24 +27,14 @@
     <a href="#" class="atm-name">ATM-F</a>
 
 
-    <img class="watermark-image" src='./static/img/earth.svg'>
+    <img class="watermark-image" src='./static/img/credit-card.svg'>
+    <!-- <img class="world-picture" src='./static/img/sas_icon_simple.png'> -->
     <div class="center-content">
         <div class="languages-wrapper">
-            <h2 class="language_title js-language-title">Выберите язык:</h2>
-            <h2 class="language_title js-language-title">Select your language:</h2>
-
-            <div class="languages">
-                <div class="language">
-                    <p class="language_name button js-language" data-lang="eng">English</p>
-                    <!-- <img class="language_flag" src="./static/img/us_big.svg"> -->
-                </div>
-
-                <div class="language">
-                    <p class="language_name button js-language" data-lang="rus">Русский</p>
-                    <!-- <img class="language_flag" src="./static/img/russia_big.svg "> -->
-                </div>
-            </div>
+            <h2 class="language_title js-language-title">Пожалуйста, заберите вашу карту</h2>
+            <h2 class="language_title js-language-title">Please, take your card</h2>
         </div>
+    </div>
     </div>
 </body>
 
