--- a/success.html
+++ b/success.html
@@ -1,4 +1,47 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="./static/css/reset.css" rel="stylesheet" media="screen">
+    <link href="./static/css/common.css" rel="stylesheet" media="screen">
+    <link href="./static/css/language.css" rel="stylesheet" media="screen">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="../js/idle-timer.min.js"></script>
+    <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
+    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
+    <script type="text/javascript" src="./static/js/language.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/redirect_to_index.js" async="true"></script>
+</head>
+
+<body class="main-background">
+    <!-- <a href="http://thebank.sas-mic.local/atm/main.html "></a> -->
+    <a href="#" class="atm-name">ATM-F</a>
+
+
+    <img class="watermark-image" src='./static/img/tick.svg'>
+    <!-- <img class="watermark-image watermark-image_rotated" src='./static/img/plus.svg'> -->
+    <div class="center-content">
+        <div class="languages-wrapper">
+            <h2 class="language_title js-language-title">Пожалуйста, заберите деньги</h2>
+            <h2 class="language_title js-language-title">Please, take the cash</h2>
+        </div>
+    </div>
+    </div>
+</body>
+
+</html>
+
+
+<!-- <!doctype html>
 <html>
  <script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>  
 <script type="text/javascript" src="../js/idle-timer.min.js"></script>  
@@ -130,4 +173,4 @@ setTimeout(timer,1000);
 $("#back").click(function(){location.href='main.html'})
 </script>
 </body>
-</html>
+</html> -->
